$Id: ChangeLog,v 1.221 2005/06/06 10:50:14 haraldkipp Exp $

2005-06-06  Harald Kipp  <harald.kipp@egnite.de>

	* configure.ac, os/version.c: Emergency bugfix release 3.9.7.1.

	* app/Makedefs.avr-gcc: Use Vesa's workaround for applications
	too.

	* appload/appload.c: Replaced deprecated port access. Now
	compiles with latest avr-libc.

	* dev/hd44780.c: Fixed to re-enable ICCAVR compilation.

	* include/sys/atom.h: Failed with building outside the
	source tree. In addition all header files moved from 
	arch/cpu/include to include/arch/cpu.


2005-06-05  Harald Kipp  <harald.kipp@egnite.de>

	* include/netinet/udp.h: NutUdpInput() prototype removed.
	It' already defined in include/sys/sock_var.h.

	* include/sys/sock_var.h: Added bcast parameter to
	NutUdpInput() prototype.

	* net/arpcache.c: MAX_ARPREQUESTS default changed from
	4 to 1. ARP retries should be handled by upper layers.

	* net/ipin.c: Broadcast flag is passed to NutUdpInput().
	I changed its type from u_char to ureg_t to better support
	16 and 32 bit platforms.

	* net/udpin.c: Added bcast parameter to NutUdpInput().
	Do not respond with ICMP unreachable to broadcasts. Fixes
	bug #1215192.

	* nutsetup: Added advice to the user to change to lib/
	before running make.


2005-05-27  Oliver Schulz  <olischulz@web.de>

	* include/sys/atom.h, os/thread.c, os/timer.c, os/nutinit.c: Platform dependant files were moved to /arch directory.


2005-05-27  Vesa Jaaskelainen  <chaac@.nic.fi>

	* dev/ahdlcavr.c: Fixed bugs on closing AHDLC sessions. Fixed
	AHDLC ioctl handling. Not all messages were handled correctly
	and fixed possible problem of reading memory from address zero.

2005-05-27  Ole Reinhardt <ole.reinhardt@embedded-it.de>
        * autogen.sh, cleansweep.sh
          Added
          autogen.sh: automaticaly call autoconf, automake, aclocal and...
          cleansweep.sh: automaticaly remove all the auto generated files

2005-05-27  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* conf/dev/dev.nut